<resources>
    <string name="app_name">LearnMaterial</string>
    <string name="desc_splash_background">Splash Background</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="register_hint1">Please Create an account using the correct</string>
    <string name="signin_hint1">Please Sign in using the registered email</string>
    <string name="signin_hint2">and password</string>
    <string name="register_hint2">data</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="jurusan">Jurusan</string>
    <string name="full_name">Full Name</string>
    <string name="jurusan_if">IF</string>
    <string name="jurusan_mbti">MBTI</string>
    <string name="jurusan_dkv">DKV</string>
    <string name="jurusan_te">TE</string>
    <string name="jurusan_tf">TF</string>
    <string name="jurusan_si">SI</string>
    <string name="jurusan_tk">TK</string>
    <string name="jurusan_di">DI</string>

    <string name="title_beranda">Beranda</string>
    <string name="title_profil">Profil</string>
    <string name="slide_terkait">Slide Terkait</string>

    <string name="syarat_dan_ketentuan">&#8226; Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore.\n\n&#8226; Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore.\n\n&#8226; Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore.\n
    </string>

</resources>
