<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.RegisterView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/create_an_account"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="45dp"
        android:layout_height="2dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/register_hint1"
        android:textColor="#898989"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/register_hint2"
        android:textColor="#898989"
        android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginBottom="16dp"
        app:hintTextAppearance="@style/TextLabelAppearance">

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="14sp"
            android:theme="@style/EditTextTheme" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginBottom="16dp"
        app:hintTextAppearance="@style/TextLabelAppearance">

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="14sp"
            android:theme="@style/EditTextTheme" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginBottom="45dp"
        app:hintTextAppearance="@style/TextLabelAppearance">

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="14sp"
            android:theme="@style/EditTextTheme" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="68dp"
            android:layout_height="1dp"
            android:background="#E5E5E5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#C4C4C4"
            android:textSize="14sp" />

        <View
            android:layout_width="68dp"
            android:layout_height="1dp"
            android:background="#E5E5E5" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_border"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

</LinearLayout>