<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.ProfileView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F7FA"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <FrameLayout
                android:layout_width="140dp"
                android:layout_height="140dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/person" />

                <ImageView
                    android:id="@+id/iv_add_photo"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom|end"
                    android:src="@drawable/ic_add_photo" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_profile_appbar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="Ryo Alif Ramadhan"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_profile_appbar_jurusan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S1 Informatika"
                android:textColor="#898989"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/about"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="45dp"
                android:layout_height="2dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorAccent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/tv_profile_label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/full_name"
                    android:textColor="#898989"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_profile_label_name"
                    android:text="Ryo Alif Ramadhan"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_profile_edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/edit"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/tv_profile_label_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/email"
                    android:textColor="#898989"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_profile_label_email"
                    android:text="ryoalif1998@gmail.com"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_profile_edit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/edit"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_profile_label_jurusan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/jurusan"
                    android:textColor="#898989"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_profile_jurusan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_profile_label_jurusan"
                    android:text="S1 Informatika"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_profile_edit_jurusan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/edit"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>